почти сделал 2 лабу по формальным языкам